compiler/testData/cli/jvm/optIn/optInOverrideMessageFir.out
compiler/testData/cli/jvm/optIn/optInOverrideMessageFir.kt:16:18: error: base declaration of supertype 'Base' requires opt-in to be overridden: This API is experimental and can change at any time, please use with care. The overriding declaration must be annotated with '@Marker' or '@OptIn(Marker::class)'
    override fun foo() {}
                 ^^^
compiler/testData/cli/jvm/optIn/optInOverrideMessageFir.kt:18:18: error: base declaration of supertype 'Base' requires opt-in to be overridden. The overriding declaration must be annotated with '@EmptyMarker' or '@OptIn(EmptyMarker::class)'
    override fun bar() {}
                 ^^^
COMPILATION_ERROR
